2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* NemerleBinding.addin.xml, NemerleBinding.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-07-27  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/NemerleFormattingStrategy.cs: This code was
	pretty broken (as had been the original CSharpBinding code it was
	copied verbatim from). Also don't think it would have compiled
	because the FormatLine method signature did not match what it was
	supposed to be overriding. Make it use the default formatter for
	now.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, NemerleBinding.addin.xml: Migration to
	  Mono.Addins.

2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* NemerleBinding.mdp: Don't copy referenced assemblies.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* NemerleBinding.addin.xml: Change add-in versions to 0.13.
	* NemerleBinding.mdp: Flush.

2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* NemerleBindingCompilerServices.cs: Removed unused var.

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Parser.cs, Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs,
	  Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs,
	  Parser/SharpDevelopTree/Constructor.cs,
	  Parser/SharpDevelopTree/Class.cs, Parser/SharpDevelopTree/Local.cs:
	  Renamed Abstract* classes to Default*. Removed some unnecessary
	  Default* subclasses.
	* Parser/SharpDevelopTree/CompilationUnit.cs,
	  Parser/SharpDevelopTree/AttributeSection.cs, NemerleBinding.mdp,
	  Makefile.am: Removed some unnecessary Default* subclasses.

2006-09-19 Jacob Ilsø Christensen <jacobilsoe@gmail.com>

	* NemerleBinding.mdp: Updated.
	* .: Added svn:ignore for NemerleBinding.pidb.
